# need2no

./: README.md  generatebankstatement.py  pyproject.toml  requirement.txt  requirements.txt
_legacy/: Dockerfile  requirement.txt
_legacy/api/: __init__.py
_legacy/cc/: Doc1.docx  Doc1_global.pci_lite.v1_report.json  Doc1_ocr_spans.json  Doc1_ocr_text.txt  Doc1_pci_lite_report.json  statement_002_global.pci_lite.v1_report.json  statement_002_ocr_spans.json  statement_002_ocr_text.txt
_legacy/config/: n2n.defaults.yaml
_legacy/docs/: decision_contract.md
_legacy/n2n/: __init__.py  api_server.py  cli.py  config.py  models.py  pipeline.py  spans.py
_legacy/n2n_redactor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
_legacy/tests/: test_card_pan.py  test_pack_registry.py  test_pci_lite_pack.py
config/: n2n.defaults.yaml
n2n/: __init__.py  api_server.py  cli.py  extract.py  models.py  pipeline.py
n2n/detectors/: bank_statement_uk.py
n2n/extractors/: pdf_ocr.py  pdf_text.py
n2n/io/: __init__.py  input.py
n2n/ocr/: __init__.py  registry.py
n2n/packs/: __init__.py  global_card_photo_v1.py  global_id_photo_v1.py  global_pci_lite_v1.py  photo_common.py  policy.py  registry.py
n2n/parsers/: pdf_text_extractor.py
n2n_redactor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: dev_reset.sh
tests/: conftest.py  test_card_pan.py  test_card_photo_pack.py  test_id_photo_pack.py  test_ocr_registry.py  test_pan_visual_heuristic.py  test_pci_lite_pack.py  test_vision_parsers.py
tools/: test_pipeline.py
(+254 files in other folders)
